Favicon consistent, mob layout issue

--- a/styles/blogPost.css
+++ b/styles/blogPost.css
@@ -12,7 +12,6 @@
     cursor: pointer;
 }
 
-
 .tab-to-archive-main {
   /*min-width: 320px;
   max-width: 800px;*/
@@ -60,4 +59,12 @@
   color: #555;
   border-top: 2px solid #E6F3E2;
   border-bottom: 2px solid #E6F3E2;
+}
+
+.more-container {
+    margin: 0 0 10px;
+}
+
+.twitter-link {
+    padding: 0 5px;
 }
